adjustments to footer

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,26 +2,24 @@
   <div class="row">
     <!-- Our Mission -->
     <div class="col-sm-3">
-      <div class="heading-footer "><h4>Our Mission</h4></div>
-      <!-- <%= link_to "Our Mission", mission_path %></p> -->
-        <a href="/mission" class="btn-lg btn-primary">About Us</a>
-      </a>
+      <div class="heading-footer">
+        <h4>Our Mission</h4>
+      </div>
+        <a href="/mission">Learn more</a> about what we do here at Small Talk.
     </div>
 
     <!-- Requesting a theme -->
     <div class="col-sm-3 mg25-xs">
       <div class="heading-footer">
-        <h4 class="text-primary">Your Ideas</h4></div>
-        <!-- <p class="text-primary">This text is important.</p> -->
-        <!-- <%= link_to "Request a Theme", request_form_path %> -->
-        <a href="/request_form" class="btn-lg btn-primary">Request Theme</a>
+        <h4 class="text-primary">Your Ideas</h4>
+      </div>
+        Have an idea for the site, or want to request a theme we don't currently provide? Click <a href="/request_form">here.</a>
     </div>
 
     <!-- Careers -->
     <div class="col-sm-3 mg25-xs">
       <div class="heading-footer"><h4>Careers</h4></div>
-        <!-- <%= link_to "Careers", careers_path %> -->
-        <a href="/careers" class="btn-lg btn-primary">Join</a>
+        <a href="/careers">Explore</a> exciting job opportunities within our dynamic culture and growing team.
     </div>
 
     <!-- Contact -->
