--- a/app/views/welcome/mission.html.erb
+++ b/app/views/welcome/mission.html.erb
@@ -2,12 +2,12 @@
 	
 <h1>Our Mission:</h1>
 
-<h2>Here at Small Talk, we strive to remove the awkwardness from social events, <br>and allow YOU to become the life of the party.</h2>
+<p>Here at Small Talk, we strive to remove the awkwardness from social events, <br>and allow YOU to become the life of the party.</p>
 
 <img src="http://www.assistantmagazine.com/wp-content/uploads/2015/06/26The-Shining.jpg" width="550" height="415" alt="shining">
 
 
-
+<h3>Latest Tweets:</h3>
 <div id="container">
   <a class="twitter-timeline" height="300px" href="https://twitter.com/smallTalkToMe" data-widget-id="694906938132406272">Tweets by @smallTalkToMe</a>
   <script>
