partials and cleanup

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,7 @@
     <div class="row top-bar-row">
       <!-- Address and Phone -->
       <div class="col-sm-6 text-left topmenu-holder">
-        <a href="<% root_path %>" class="navbar-brand">
+        <a href="<%= root_path %>" class="navbar-brand">
           <div class="css-logo"></div>
           <%= image_tag 'logo.png', class: 'raleway-logo', alt: 'smalltalktome' %>
         </a>
