--- a/app/views/twilio/index.html.erb
+++ b/app/views/twilio/index.html.erb
@@ -1,33 +1,33 @@
-<div id="container">
-  <form id="contactform" role="form" action="#" method="POST">
-    <div class="form-group">
-        <h3>ABORT!!</h3>
-        <p class="help-block">
-          If it all goes south, schedule a call and we can give you a nice excuse to get out of town.
-        </p>
-    </div>
+<div class="container-fluid">
+  <div class="panel panel-primary center" style= "width: 50%; margin-bottom: 20px">
+    <form id="contactform" role="form" action="#" method="POST">
 
-    <div class="form-group">
-      <input class="form-control" type="text" name="phone" id="phoneNumber" placeholder="(651) 555-7889">
-    </div>
+      <div class="panel-body">
+          <h3>ABORT!</h3>
+          <p class="help-block">
+            If it all goes south, schedule a call and we can give you a nice excuse to get out of town.
+          </p>
+      </div>
 
-    <div class="form-group">
-      <input class="form-control" type="text" name="time" id="timeMinutes" placeholder="In how many minutes would you like a call?">
-    </div>
+      <div class="form-group">
+        <input class="form-control" type="text" name="phone" id="phoneNumber" placeholder="(651) 555-7889">
+      </div>
 
-    <div id="abort-call">
-      <button type="submit" class="btn btn-default">Give Me My ABORT Call</button>
-    </div>
+      <div class="form-group">
+        <input class="form-control" type="text" name="time" id="timeMinutes" placeholder="In how many minutes would you like a call?">
+      </div>
 
-    <%= link_to "Home", root_url %>
+      <div id="abort-call">
+        <button type="submit" class="btn btn-default">Give Me My ABORT Call</button>
+      </div>
 
-  </form>
+    </form>
 
+  </div>
 </div>
 
 
 
-</div>
 
 
 
