--- a/app/views/themes/show.html.erb
+++ b/app/views/themes/show.html.erb
@@ -27,23 +27,11 @@
     <strong>Tip:</strong>
     <li><%=@tip.description %></li>
       <div class="text-right">
-      <%= button_to "Save Tip", edit_user_path(current_user), remote: true, params: {id: @tip.id} %>
+        <div class="">
+        	<% if logged_in? %>
+            <%= button_to "Save Tip", edit_user_path(current_user), remote: true, params: {id: @tip.id} %>
+          <% end %>
+        </div>
       </div>
-    </div>
-  </ul>
-</div>
-
-<div id="container">
-  <a class="twitter-timeline" height="300px" href="https://twitter.com/smallTalkToMe" data-widget-id="694906938132406272">Tweets by @smallTalkToMe</a>
-  <script>
-    !function(d,s,id){
-      var js,fjs = d.getElementsByTagName(s)[0],
-      p=/^http:/.test(d.location)?'http':'https';
-      if(!d.getElementById(id)){js=d.createElement(s);
-        js.id=id;js.src=p+"://platform.twitter.com/widgets.js";
-        fjs.parentNode.insertBefore(js,fjs);
-      }
-    }
-    (document,"script","twitter-wjs");
-  </script>
+    </ul>
 </div>
