--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,7 +3,7 @@
 @import "bootstrap";
 // @import "breakpoint";
 
-@import "style.css";
+@import "style";
 @import "bootstrap-social";
 @import "animate.min";
 @import "owl.carousel";
