--- a/app/views/welcome/_portfolio.html.erb
+++ b/app/views/welcome/_portfolio.html.erb
@@ -29,22 +29,22 @@
               <a href="/themes/<%= theme.id %>">
                 <%= image_tag "themes/stock#{theme.id}.jpg", class: "img-responsive", alt: "..." %>
               </a>
-
-
-          </div>
-        </li><!-- /list item -->
-        <!-- End Item 1 -->
+              
+              <div class="caption">
+                <h2><%= theme.name %></h2>
+              </div>
+            </div>
+          </li>
         <% end %>
-
-
+        <!-- End Item 1 -->
       </ul><!-- /portfolio ul -->
     </div><!-- /row -->
 
     <!-- Lead Text -->
     <div class="row">
       <div class="mb20 col-sm-6 col-sm-offset-3 text-center">
-        <span class="lead"><b>Themes:</b><br> s
-          We've got some themed content. So you have fun things to say.</span>
+        <span class="lead"><strong>Themes:</strong><br>
+          <h4>We've got some themed content. So you have fun things to say.</h4></span>
       </div>
     </div>
 
