fancy portfolio shuffle and jquery error

--- a/app/views/welcome/_abort.html.erb
+++ b/app/views/welcome/_abort.html.erb
@@ -11,7 +11,7 @@
       <!-- Content 1 -->
       <div>
         <div class="text-center">
-         <a href="/twilio" style= "float: center; width: 15%; margin-bottom: 20px", data-toggle="modal" class="btn btn-lg btn-info">Abort!</a>
+         <a href="<%= twilio_path %>" style= "float: center; width: 15%; margin-bottom: 20px", class="btn btn-lg btn-info">Abort!</a>
       </div>
     </div>
   </div><!-- /container -->
