--- a/app/views/welcome/mission.html.erb
+++ b/app/views/welcome/mission.html.erb
@@ -1,5 +1,5 @@
-<%= link_to "Back", root_path %>
-	
+<div class="container-fluid">
+
 <h1>Our Mission:</h1>
 
 <p>Here at Small Talk, we strive to remove the awkwardness from social events, <br>and allow YOU to become the life of the party.</p>
@@ -21,4 +21,5 @@
     }
     (document,"script","twitter-wjs");
   </script>
+</div>
 </div>
