--- a/app/views/welcome/support.html.erb
+++ b/app/views/welcome/support.html.erb
@@ -1,7 +1,7 @@
-<%= link_to "Back", root_path %>
-
+<div class="container-fluid">
 <h1>For immediate assistance...</h1>
 
 <h2>Call Schuyler or Dan</h2>
 
 <img src="https://s-media-cache-ak0.pinimg.com/originals/de/15/87/de1587ae35cf13c9472e37cac1109146.jpg" alt="zissou">
+</div>
