--- a/app/views/welcome/careers.html.erb
+++ b/app/views/welcome/careers.html.erb
@@ -1,7 +1,9 @@
-<%= link_to "Back", root_path %>
+<div class="container-fluid">
 
 <h1>Join Us</h1>
 
 <h2>Our team at Small Talk is always growing. Why not apply today?</h2>
 
 <img src="https://evanjpalmer.files.wordpress.com/2014/02/you_only_move_twice_46.jpg?w=500&h=375" alt="simpsons">
+  
+</div>
