--- a/app/assets/stylesheets/portfolio_helper.css
+++ b/app/assets/stylesheets/portfolio_helper.css
@@ -14,6 +14,7 @@
 }
 
 .caption h2 {
+    display: block;
     color: #fff;
     -webkit-font-smoothing: antialiased;
     text-shadow: 1px 1px #000;
