fixed some stretchy images, replaced housewives with date night

--- a/app/views/welcome/_portfolio.html.erb
+++ b/app/views/welcome/_portfolio.html.erb
@@ -4,7 +4,10 @@
     <!-- Begin Title -->
     <div class="row" data-sr="enter right">
       <div class="col-xs-4 col-xs-offset-4 text-center">
-        <div class="heading"><h4>Our Work</h4></div>
+        <div class="heading">
+          <h4>Themes</h4>
+        </div>
+          <p>What are you up to tonight?</p>
       </div>
     </div>
 
@@ -39,14 +42,6 @@
         <!-- End Item 1 -->
       </ul><!-- /portfolio ul -->
     </div><!-- /row -->
-
-    <!-- Lead Text -->
-    <div class="row">
-      <div class="mb20 col-sm-6 col-sm-offset-3 text-center">
-        <span class="lead"><strong>Themes:</strong><br>
-          <h4>We've got some themed content. So you have fun things to say.</h4></span>
-      </div>
-    </div>
 
   </div><!-- /container -->
 </section><!-- /content -->
