fixes save funciton to save correct tip

--- a/app/views/themes/show.html.erb
+++ b/app/views/themes/show.html.erb
@@ -29,7 +29,8 @@
       <div class="text-right">
         <div class="" id="save_tip">
         	<% if logged_in? %>
-            <%= button_to "Save Tip", edit_user_path(current_user), remote: true, params: {id: @tip.id} %>
+
+            <%= button_to "Save Tip", edit_user_path(current_user, tip_id: @tip.id), remote: true%>
           <% end %>
         </div>
       </div>
