--- a/app/views/themes/show.html.erb
+++ b/app/views/themes/show.html.erb
@@ -3,35 +3,13 @@
 </div>
 <div class="text-center">
   <div class="primary">
-    <%= button_to "Refresh Article and Tip", action: "new", remote: true, id: @theme.id %>
+    <%= link_to "Refresh Article and Tip", refresh_path(@theme), method: :post, remote: true %>
   </div>
 </div>
 
 <div class="container-fluid">
-  <ul>
-    <div class="bg-warning" style="width: 100%;">
-    <strong>Custom Conversation Starter:</strong>
-    <% post_title = @content.keys.sample %>
-    <% post_url = @content[post_title] %>
-    <% formatted_title = post_title.gsub(/TIL/, "") %>
-    <% formatted_title[0].upcase! %>
-
-    <% if post_url.include?("comments") %>
-      <% reddit_post_id = post_url.split('/')[-2] %>
-      <% end %>
-      <li><%= link_to formatted_title, post_url, target: "_blank" %></li><br>
-    </div>
-
-    <div class="bg-info" style="width: 100%;">
-    <% @tip = @tips.sample %>
-    <strong>Tip:</strong>
-    <li><%=@tip.description %></li>
-      <div class="text-right">
-        <div class="" id="save_tip">
-        	<% if logged_in? %>
-            <%= button_to "Save Tip", edit_user_path(current_user), remote: true, params: {id: @tip.id} %>
-          <% end %>
-        </div>
-      </div>
-    </ul>
+<%= render partial: "themes/tipsContent", locals: {tips: @tips, content: @content}%>
 </div>
+
+<!-- 1) themes/ _tips+comments.html.erb  ul id="refresh", local variables tips contents jrender partial: "tips",  contents: {tips @tips contents: @contents}
+2) showpage render the partial  -->
