--- a/app/views/themes/refresh.js.erb
+++ b/app/views/themes/refresh.js.erb
@@ -1,2 +1,5 @@
 $("#refresh").html("<%= j render partial: 'tipsContent', locals: {tips: @tips, content: @content}%>")
-// add jquery effect here 
+// add jquery effect here
+$(".primary").click(function(){
+  $("li").fadeOut();
+});
