reorganized pictures in theme gallery for relevance

--- a/app/views/welcome/_portfolio.html.erb
+++ b/app/views/welcome/_portfolio.html.erb
@@ -7,7 +7,7 @@
         <div class="heading">
           <h4>Themes</h4>
         </div>
-          <p>What are you up to tonight?</p>
+          <p>Who are you hanging out with tonight?</p>
       </div>
     </div>
 
