--- a/app/views/themes/_tipsContent.html.erb
+++ b/app/views/themes/_tipsContent.html.erb
@@ -1,5 +1,5 @@
  <ul id="refresh">
-  <div class="bg-warning" style="width: 100%;">
+  <div class="" style="width: 100%;">
   <strong>Custom Conversation Starter:</strong>
   <% post_title = content.keys.sample %>
   <% post_url = content[post_title] %>
@@ -9,18 +9,19 @@
   <% if post_url.include?("comments") %>
     <% reddit_post_id = post_url.split('/')[-2] %>
     <% end %>
-    <li><%= link_to formatted_title, post_url, target: "_blank" %></li><br>
+    <h3><li><%= link_to formatted_title, post_url, target: "_blank" %></li><br></h3>
   </div>
 
-  <div class="bg-info" style="width: 100%;">
+  <div class="mt15" style="width: 100%;">
   <% tip = tips.sample %>
   <strong>Tip:</strong>
-  <li><%=tip.description %></li>
-    <div class="text-right">
-      <div class="" id="save_tip">
+  <h3><li><%=tip.description %></li></h3>
+    <div class="text-left">
+      <div class="mt15" id="save_tip">
         <% if logged_in? %>
-          <%= button_to "Save Tip", edit_user_path(current_user), remote: true, params: {id: tip.id} %>
+          <h4><%= link_to "Save Tip", edit_user_path(current_user, tip_id: tip.id), remote: true, method: :post%></h4>
         <% end %>
       </div>
     </div>
+  </div>
   </ul>
