new carousel and some formatting

--- a/app/views/welcome/_carousel.html.erb
+++ b/app/views/welcome/_carousel.html.erb
@@ -14,21 +14,18 @@
       <!-- Begin Item 1 -->
       <div class="item active">
         <!-- Item BG -->
-        <div class="background-main" style="background-image:url('<%= asset_path("backgrounds/bg7.jpg") %>');" data-0="background-position:0px 0px;" data-500="background-position:0px -250px;">
+        <div class="background-main" style="background-image:url('<%= asset_path("backgrounds/bg1.jpg") %>');" data-0="background-position:0px 0px;" data-500="background-position:0px -250px;">
           <div class="container">
-            <div class="row carousel-content center-vertically-right">
+            <div class="row carousel-content center-vertically">
               <!-- Content -->
-              <div class="fadeInRight-animated" data-animation="fadeInRight">
-                <div class="carousel-description col-sm-5">
-                  <h3 class="heavy text-white"><span class="carousel-title-bgclear">Clean Code + Design</span></h3><h3 class="heavy text-white"><span class="carousel-title-bgclear">HTML5 and CSS3</span></h3><h3 class="heavy text-white"><span class="carousel-title-bgclear">70+ Pages Total</span></h3>
-                  <p>With over 90% of Bootstraps components restyled, over 35 pages of shortcode features, and over 30 pages for you to use, this is the <b>ultimate</b> parallax, responsive Bootstrap 3 template.</p>
+              <div class="fadeInTop-animated" data-animation="fadeInTop">
+                <div class="carousel-description col-sm-12">
+                  <h1 class="heavy text-white"><span class="carousel-title-bgclear">smalltalkto.me</span></h1><br>
+                  <h3 class="text-white">It's a big world out there, but we're here at help. If you're feeling nervous about an upcoming social event, <b>smalltalkto.me</b> is the resource for you. We have have plenty of conversation tips and some great stories for you to share</h3>
                 </div>
               </div>
-              <div class="fadeInLeft-animated" data-animation="fadeInLeft">
-                <div class="col-sm-6 col-sm-offset-1">
-                  <%= image_tag 'showcase-full.png', class: 'img-responsive carousel-image', alt: 'Responsive Showcase' %>
-                </div>
-              </div>
+
+
             </div><!-- /content container -->
           </div><!-- /container -->
         </div><!-- /bg div -->
@@ -36,56 +33,47 @@
       <!-- End Item 1 -->
 
       <!-- Begin Item 2 -->
-      <div class="item">
-        <!-- Item BG -->
-        <div style="background-image:url('<%= asset_path("backgrounds/bg8.jpg") %>');" data-0="background-position:0px 0px;" data-500="background-position:0px -250px;">
-          <div class="container">
-            <div class="row carousel-content center-vertically-left">
-              <!-- Img -->
-              <div class="fadeInLeft-animated" data-animation="fadeInLeft">
-                <div class="col-sm-6 hidden-xs">
-                  <%= image_tag 'showcase2.png', class: 'img-responsive carousel-image', alt: 'Responsive Showcase' %>
-                </div>
-              </div>
-              <!-- Content -->
-              <div class="fadeInRight-animated" data-animation="fadeInRight">
-                <div class="carousel-description mt10 col-sm-5 col-sm-offset-1">
-                  <h4 class="heavy text-white"><span class="carousel-title-bg">Many Javascript Plugins</span></h4>
-                  <h4 class="heavy text-white"><span class="carousel-title-bg">Responsive Video Content</span></h4>
-                  <h4 class="heavy text-white"><span class="carousel-title-bg">Shortcodes Pages + Docs</span></h4>
-                  <p>Flexible for any project. And hey, we made sure you have all the features you need for any website. Also shortcodes on every features page, just copy & paste where you need.</p>
-                  <a href="features.html" class="btn btn-rw btn-primary">
-                    Features &nbsp;&nbsp;<span class="ion-ios7-arrow-right"></span>
-                  </a>
-                </div>
-              </div>
-            </div><!-- /content container -->
-          </div><!-- /container -->
-        </div><!-- /bg div -->
-      </div><!-- /item -->
-      <!-- End Item 2 -->
 
-      <!-- Begin Item 3 -->
-      <div class="item">
-        <!-- Item BG -->
-        <div style="background-image:url('<%= asset_path("backgrounds/bg9.jpg") %>');" data-0="background-position:0px 0px;" data-500="background-position:0px -250px;">
-          <div class="container">
-            <div class="row carousel-content center-vertically-right">
-              <div class="fadeInUpBig-animated" data-animation="fadeInUpBig">
-                <div class="carousel-description col-sm-8 col-sm-offset-2 text-center">
-                  <!-- Content -->
-                  <span class="fa fa-heartbeat fa-4x text-white"></span>
-                  <h2 class="heavy text-white"><span class="carousel-title-bgclear">Clean Code + Design</span></h2>
-                  Raleway comes packed with over 30 pages and 50 components. All restyled to refresh your visitors. We have pricing tables, 404 pages, coming soon pages, about pages, and many more.<br>
+        <!-- Begin Item 1 -->
+        <div class="item">
+          <!-- Item BG -->
+          <div class="background-main" style="background-image:url('<%= asset_path("backgrounds/bg2.jpg") %>');" data-0="background-position:0px 0px;" data-500="background-position:0px -250px;">
+            <div class="container">
+              <div class="row carousel-content center-vertically">
+                <!-- Content -->
+                <div class="fadeInTop-animated" data-animation="fadeInTop">
+                  <div class="carousel-description col-sm-12">
+                    <h1 class="heavy text-white"><span class="carousel-title-bgclear">smalltalkto.me</span></h1><br>
+                    <h3 class="text-white">Would a back-up plan make your life a little better? We are here to help there too. Just schdule a call below and smalltalk will call with an emergency. The perfect out.</h3>
+                  </div>
                 </div>
-              </div>
-            </div><!-- /content container -->
-          </div><!-- /container -->
-        </div><!-- /bg div -->
-      </div><!-- /item -->
+
+
+              </div><!-- /content container -->
+            </div><!-- /container -->
+          </div><!-- /bg div -->
+        </div><!-- /item -->
+
       <!-- End Item 3 -->
 
-    </div><!-- /carousel inner -->
+      <div class="item">
+        <!-- Item BG -->
+        <div class="background-main" style="background-image:url('<%= asset_path("backgrounds/bg3.jpg") %>');" data-0="background-position:0px 0px;" data-500="background-position:0px -250px;">
+          <div class="container">
+            <div class="row carousel-content center-vertically">
+              <!-- Content -->
+              <div class="fadeInTop-animated" data-animation="fadeInTop">
+                <div class="carousel-description col-sm-12">
+                  <h1 class="heavy text-white"><span class="carousel-title-bgclear">smalltalkto.me</span></h1><br>
+                  <h3 class="text-white">If you'd like to save some tips, feel free to log in. When you come back after another successful party, all your tips will be waiting. We love our users.</h3>
+                </div>
+              </div>
+
+
+            </div><!-- /content container -->
+          </div><!-- /container -->
+        </div><!-- /bg div -->
+      </div><!-- /item -->
     <!-- End Wrapper for slides -->
 
     <!-- Controls -->
