--- a/app/views/welcome/_abort.html.erb
+++ b/app/views/welcome/_abort.html.erb
@@ -3,7 +3,7 @@
     <!-- Title -->
     <div class="row">
       <div class="col-sm-12">
-        <p class="lead text-center"><b>Should contain abort / explanation</b><br></p>
+        <p class="lead text-center"><b>Click here to schedule a call. Just in case.</b><br></p>
         <hr style="width:200px">
       </div>
     </div>
