adds modal abort and front page formatting

--- a/app/views/welcome/_accordion.html.erb
+++ b/app/views/welcome/_accordion.html.erb
@@ -1,23 +1,32 @@
-<div id="about" class="background-light-grey pt50 pb50">
+<!-- Begin Skills -->
+<div class="pt40 mb40 border-top">
   <div class="container">
-
-    <!-- Begin Accordion Row -->
+    <!-- Title -->
     <div class="row">
-      <!-- Video -->
       <div class="col-sm-12">
-        <div class="heading mb20"><h4><span class="ion-android-developer mr15"></span>We Are Small Talk.</h4></div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam eu risus libero. Donec et lorem lacinia, <a class="tooltip-active" data-toggle="tooltip" data-placement="top" title="Tooltip on top">adipiscing</a> nunc nec, hendrerit sapien. Sed in scelerisque tortor. Praesent porttitor odio non ullamcorper gravida.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam eu risus libero. Donec et lorem lacinisent porttitor odio non ullamcorper gravida.</p>
-        <!-- List -->
-        <ul class="list-arrow-2-color">
-            <li><small>Etiam mollis pharetra adipiscing. Etiam porta in sem vitae suscipit. </small></li>
-            <li><small>Consectetur adipiscing elit. Maecenas tempsam suscipit sagittis vestibulum.</small></li>
-            <li><small>Nulla volutpat aliquam velit</small></li>
-            <li><small>Faucibus porta lacus fringilla vel</small></li>
-        </ul>
-      </div><!-- /column -->
-    </div><!-- /row -->
-    <!-- End Accordion Row -->
-
+        <p class="lead text-center">The <b>Basics</b><br></p>
+        <hr style="width:200px">
+      </div>
+    </div>
+    <div class="row">
+      <!-- Content 1 -->
+      <div class="col-sm-4" data-sr="enter left over 1s">
+          <h4><span class="ion-chatboxes bordered-icon-sm mr15"></span> Advice.</h4>
+          <p class="no-margin">We've hand curated some of the best converstaion advice from around the web. Just check out your party theme and we will hook you up.</p>
+      </div>
+      <!-- Content 2 -->
+      <div class="col-sm-4 mt20-xs" data-sr="enter top over 1s">
+          <h4><span class="ion-lightbulb bordered-icon-sm mr15"></span> Conversation Starters.</h4>
+          <p class="no-margin">Check out some of our curated conversation starters below. They're organinzed by theme so your sure to find some stories which will light up the room</p>
+      </div>
+      <!-- Content 3 -->
+      <div class="col-sm-4 mt20-xs" data-sr="enter right over 1s">
+          <h4><span class="ion-ios7-telephone bordered-icon-sm mr15"></span> A Back-Up Plan</h4>
+          <p class="no-margin">We'll give you a call if you really need to get out the party. Don't worry, your secret is safe with us.</p>
+      </div>
+    </div>
+    <div class="row mt20">
+    </div>
   </div><!-- /container -->
-</div><!-- /content -->
+</div><!-- /cta -->
+<!-- End Skills -->
