--- a/app/views/welcome/_abort.html.erb
+++ b/app/views/welcome/_abort.html.erb
@@ -11,8 +11,45 @@
       <!-- Content 1 -->
       <div>
         <div class="text-center">
-         <a href="<%= twilio_path %>" style= "float: center; width: 15%; margin-bottom: 20px", class="btn btn-lg btn-info">Abort!</a>
+         <a style="float: center; width: 15%; margin-bottom: 20px" class="btn btn-lg btn-info" data-toggle="modal" data-target="#login">Abort!</a>
       </div>
     </div>
   </div><!-- /container -->
 </div><!-- /cta -->
+
+
+<div class="modal fade" id="login" tabindex="-1" role="dialog" aria-labelledby="loginLabel" aria-hidden="true">
+    <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
+                <h4 class="modal-title" id="loginLabel">Login</h4>
+            </div>
+            <div class="modal-body">
+              <form id="contactform" role="form" action="#" method="POST">
+
+                <div class="panel-body">
+                    <h3>ABORT!</h3>
+                    <p class="help-block">
+                      If it all goes south, schedule a call and we can give you a nice excuse to get out of town.
+                    </p>
+                </div>
+
+                <div class="form-group">
+                  <input class="form-control" type="text" name="phone" id="phoneNumber" placeholder="(651) 555-7889">
+                </div>
+
+                <div class="form-group">
+                  <input class="form-control" type="text" name="time" id="timeMinutes" placeholder="In how many minutes would you like a call?">
+                </div>
+
+
+                <div class="modal-footer" id="abort-call">
+                  <button type="submit" class="btn center btn-rw btn-primary">Give Me My ABORT Call</button>
+                </div>
+
+              </form><!-- /form -->
+            </div>
+        </div><!-- /modal content -->
+    </div><!-- /modal dialog -->
+</div><!-- /modal holder -->
