--- a/app/views/welcome/_abort.html.erb
+++ b/app/views/welcome/_abort.html.erb
@@ -23,7 +23,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
-                <h4 class="modal-title" id="loginLabel">Login</h4>
+                <h4 class="modal-title" id="loginLabel">The Easy Way Out</h4>
             </div>
             <div class="modal-body">
               <form id="contactform" role="form" action="#" method="POST">
