adds seed file and front page content

--- a/app/views/welcome/_portfolio.html.erb
+++ b/app/views/welcome/_portfolio.html.erb
@@ -5,9 +5,9 @@
     <div class="row" data-sr="enter right">
       <div class="col-xs-4 col-xs-offset-4 text-center">
         <div class="heading">
-          <h4>Themes</h4>
+          <h4>Things To Talk About</h4>
         </div>
-          <p>What are you up to tonight?</p>
+          <p>Tips and Stories based on Where You're Headed</p>
       </div>
     </div>
 
