--- a/app/views/welcome/_abort.html.erb
+++ b/app/views/welcome/_abort.html.erb
@@ -3,8 +3,7 @@
     <!-- Title -->
     <div class="row">
       <div class="col-sm-12">
-        <p class="lead text-center"><b>Click here to schedule a call. Just in case.</b><br></p>
-        <hr style="width:200px">
+        <p class="lead text-center"><b>Click here to schedule a call. Just in case.</b></p>
       </div>
     </div>
     <div class="row">
