--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -28,8 +28,9 @@
 	<% end %>
 
 		<% current_user.tips.each do |tip| %>
+
 			<p><div class="fa-2x <%=tip.id%>"><%= tip.description %></div></p>
-			<div class="button">
+			<div class="button <%=tip.id%>">
 				<%=link_to "Remove tip", delete_tip_path(current_user, tip_id: tip.id), method: :post, remote: true%>
 				<%#= button_to "Remove tip", remote: true, params: {id: tip.id} %>
 			</div>
