--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
+	<%= stylesheet_link_tag 'application', media: 'all' %>
 
 	<title>Small Talk</title>
 	<%= csrf_meta_tags %>
@@ -54,7 +54,7 @@
 	<!-- End Boxed or Fullwidth Layout -->
 
 	<!-- Javascript Files -->
-	<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+	<%= javascript_include_tag 'application' %>
 
 </body>
 </html>
