adds some styling to user and theme show pages

--- a/app/views/themes/_tipsContent.html.erb
+++ b/app/views/themes/_tipsContent.html.erb
@@ -1,6 +1,6 @@
  <ul id="refresh">
   <div class="" style="width: 100%;">
-  <strong>Custom Conversation Starter:</strong>
+  <strong>Conversation Starter:</strong>
   <% post_title = content.keys.sample %>
   <% post_url = content[post_title] %>
   <% formatted_title = post_title.gsub(/TIL/, "") %>
