--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,10 +2,10 @@
 	<div class="container">
 		<div class="row">
 			<!-- Page Title -->
-			<div class="col-sm-6 col-xs-12">
+			<!-- <div class="col-sm-6 col-xs-12"> -->
 				<div class="text-center">
 				<p><h2>Welcome <%="#{current_user.name}"%></p></h2>
-			</div>
+			<!-- </div> -->
 			</div>
 
 			<!-- Breadcrumbs -->
@@ -21,7 +21,7 @@
 <div class="">
 	<% if current_user.tips.length == 0 %>
 	<h4><div class="text-center">
-		Save some tips to view them here!
+		<p>Save some tips to view them here!<p>
 		<%= link_to "View a random tip", '../themes/10' %>
 	</div></h4>
 
