--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,10 +5,9 @@
     <div class="row top-bar-row">
       <!-- Address and Phone -->
       <div class="col-sm-6 text-left topmenu-holder">
-        <a href="<%= root_path %>" class="navbar-brand">
-          <div class="css-logo"></div>
-          <%= image_tag 'logo.png', class: 'raleway-logo', alt: 'smalltalktome' %>
-        </a>
+        <a href="<%= root_path %>" style="float: left; width: auto;">
+            <%= image_tag 'logo.png', alt: 'smalltalktome' %>
+         </a>
       </div>
       <!-- <div class="col-sm-7 hidden-xs contact-info">
         <span class="ion-android-system-home home-icon"></span>Bright Passage, Fond du Lac, 63138 USA<span class="ion-ios7-telephone phone-icon"></span>1702983921
